feat: update core
